--- a/client/src/styles/resources/data/registries/items/registries_backgrounds.scss
+++ b/client/src/styles/resources/data/registries/items/registries_backgrounds.scss
@@ -6,6 +6,7 @@ $reg-backgrounds: (
 
   'white':       map-get($reg-colors, 'white'),
   'black':       map-get($reg-colors, 'black'),
+  'graphite':    map-get($reg-colors, 'graphite'),
   'pale-silver': map-get($reg-colors, 'pale-silver'),
   'dirty-white': map-get($reg-colors, 'dirty-white')
 
