--- a/client/src/styles/scaffolding.scss
+++ b/client/src/styles/scaffolding.scss
@@ -37,7 +37,7 @@ body {
   flex-direction: column;
   justify-content: center;
   min-height: 100vh;
-  background-color: map-get($reg-backgrounds, 'dirty-white');
+  background-color: map-get($reg-backgrounds, 'black');
 }
 
 
