--- a/client/src/app/components/organisms/header/header.scss
+++ b/client/src/app/components/organisms/header/header.scss
@@ -7,6 +7,5 @@
 .po-header {
   padding: get-em-unit(map-get($reg-offsets, '05')) get-em-unit(map-get($roles-offsets, 'header'));
   font-size: map-get($roles-typo-font-sizes, 'app-title');
-  color: map-get($roles-col-texts, 'negative');
-  background-color: map-get($reg-backgrounds, 'black');
+  background-color: map-get($reg-backgrounds, 'dirty-white');
 }
