--- a/client/src/app/app.scss
+++ b/client/src/app/app.scss
@@ -7,6 +7,7 @@
 #app {
   @include font-smoothing();
   @include box-shadow(0 0 80em -2em map-get($reg-colors, 'dark-silver'));
+  @include user-select(none);
 
   min-width: map-get($reg-screens, 'min');
   max-width: map-get($reg-screens, 'max');
