--- a/client/src/app/app.scss
+++ b/client/src/app/app.scss
@@ -14,4 +14,5 @@
   margin: 0 auto;
   font: map-get($roles-typo-font-weights, 'text') 1em map-get($roles-typo-font-families, 'text');
   text-align: center;
+  cursor: default;
 }
