--- a/client/src/app/components/templates/homepage/homepage.scss
+++ b/client/src/app/components/templates/homepage/homepage.scss
@@ -2,8 +2,32 @@
 
 
 
-//--------------------------| Body
+//--------------------------| Base
 
 .pt-homepage {
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
+}
+
+
+//--------------------------| Main
+
+.pt-homepage--main {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+}
+
+
+//--------------------------| Section
+
+.pt-homepage--section:last-child {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+
+  > * {
+    flex: 1;
+  }
 }
