--- a/client/src/styles/resources/data/registries/core/registries_colors.scss
+++ b/client/src/styles/resources/data/registries/core/registries_colors.scss
@@ -25,6 +25,11 @@ $reg-colors: (
   'orange-dark':  #ff4800,
 
 
+  //--------------------------| Yellow
+
+  'yellow': #ffe,
+
+
   //--------------------------| Blue
 
   'blue':         #369
