--- a/client/src/styles/resources/data/registries/core/registries_colors.scss
+++ b/client/src/styles/resources/data/registries/core/registries_colors.scss
@@ -27,7 +27,7 @@ $reg-colors: (
 
   //--------------------------| Yellow
 
-  'yellow': #ffe,
+  'yellow': #ffd,
 
 
   //--------------------------| Blue
