Remove switch hover styles for mobile devices

--- a/client/src/app/components/atoms/switch/switch.scss
+++ b/client/src/app/components/atoms/switch/switch.scss
@@ -164,11 +164,13 @@
     }
   }
 
-  &:hover {
-    border-color: $hover-color;
+  @media (hover: hover) {
+    &:hover {
+      border-color: $hover-color;
 
-    &::before {
-      @include opacity(.5);
+      &::before {
+        @include opacity(.5);
+      }
     }
   }
 
