--- a/client/src/styles/resources/data/roles/roles_sizes.scss
+++ b/client/src/styles/resources/data/roles/roles_sizes.scss
@@ -2,11 +2,11 @@
 
 
 
-//--------------------------| Switch
+//--------------------------| Switcher
 
 $wings-per-row: 12;
 $wing-side-offset: 1;
 
-$roles-size-switch-base: ((map-get($reg-screens, 'min') - (map-get($roles-offsets, 'board') * 2)) / $wings-per-row) - ($wing-side-offset * 2);
-$roles-size-switch-width: $roles-size-switch-base;
-$roles-size-switch-height: $roles-size-switch-base * 2.5;
+$roles-size-switcher-base: ((map-get($reg-screens, 'min') - (map-get($roles-offsets, 'board') * 2)) / $wings-per-row) - ($wing-side-offset * 2);
+$roles-size-switcher-width: $roles-size-switcher-base;
+$roles-size-switcher-height: $roles-size-switcher-base * 2.5;
