--- a/client/src/app/app.scss
+++ b/client/src/app/app.scss
@@ -1,10 +1,11 @@
-// =========================| App |========================= //
+//====================================================|
+// APP
 
-
-
-//--------------------------| Body
 
 #app {
+
+  //--------------------------| Base
+
   @include font-smoothing();
   @include box-shadow(0 0 80em -2em map-get($reg-colors, 'dark-silver'));
   @include user-select(none);
@@ -15,4 +16,6 @@
   font: map-get($roles-typo-font-weights, 'text') 1em map-get($roles-typo-font-families, 'text');
   text-align: center;
   cursor: default;
-}
+
+
+} // #app
