--- a/client/src/app/components/atoms/label/label.scss
+++ b/client/src/app/components/atoms/label/label.scss
@@ -1,10 +1,13 @@
-// =========================| Label |========================= //
+//====================================================|
+// LABEL
 
-
-
-//--------------------------| Body
 
 .pa-label {
+
+  //--------------------------| Base
+
   font-size: map-get($roles-typo-font-sizes, 'label');
   line-height: 2em;
-}
+
+
+} // .pa-label
