--- a/client/src/app/components/atoms/meta/meta.scss
+++ b/client/src/app/components/atoms/meta/meta.scss
@@ -1,11 +1,14 @@
-// =========================| Meta |========================= //
+//====================================================|
+// META
 
-
-
-//--------------------------| Body
 
 .pa-meta {
+
+  //--------------------------| Base
+
   font-size: map-get($roles-typo-font-sizes, 'meta');
   font-weight: map-get($roles-typo-font-weights, 'meta');
   color: map-get($roles-col-texts, 'meta');
-}
+
+
+} // .pa-meta
