--- a/client/src/app/components/atoms/switcher/switcher.scss
+++ b/client/src/app/components/atoms/switcher/switcher.scss
@@ -1,5 +1,5 @@
-// =========================| Switcher |========================= //
-
+//====================================================|
+// SWITCHER
 
 
 .pa-switcher {
@@ -114,7 +114,7 @@
   //--------------------------| Roles
 
   @each $role in $roles {
-    $url: '../../../../icons/#{$role}.svg';
+    $url: '../../../../assets/icons/#{$role}.svg';
 
     &[data-role='#{$role}'] {
       &::before {
