--- a/client/src/app/components/molecules/button-group/button-group.scss
+++ b/client/src/app/components/molecules/button-group/button-group.scss
@@ -1,5 +1,5 @@
-// =========================| Button group |========================= //
-
+//====================================================|
+// BUTTON GROUP
 
 
 .pm-button-group {
