--- a/client/src/styles/resources/data/registries/core/registries_screens.scss
+++ b/client/src/styles/resources/data/registries/core/registries_screens.scss
@@ -1,5 +1,5 @@
-// =========================| Registries: Screens |========================= //
-
+//====================================================|
+// REGISTRIES: SCREENS
 
 
 $reg-screens: (
