--- a/client/src/styles/resources/data/registries/core/registries_typography.scss
+++ b/client/src/styles/resources/data/registries/core/registries_typography.scss
@@ -1,5 +1,5 @@
-// =========================| Registries: Typography |========================= //
-
+//====================================================|
+// REGISTRIES: TYPOGRAPHY
 
 
 //--------------------------| Font families
