--- a/client/src/styles/resources/data/registries/items/registries_backgrounds.scss
+++ b/client/src/styles/resources/data/registries/items/registries_backgrounds.scss
@@ -1,5 +1,5 @@
-// =========================| Registries: Backgrounds |========================= //
-
+//====================================================|
+// REGISTRIES: BACKGROUND
 
 
 $reg-backgrounds: (
