--- a/client/src/styles/resources/data/registries/items/registries_gradients.scss
+++ b/client/src/styles/resources/data/registries/items/registries_gradients.scss
@@ -1,5 +1,5 @@
-// =========================| Registries: Gradients |========================= //
-
+//====================================================|
+// REGISTRIES: GRADIENTS
 
 
 $reg-gradients: (
