--- a/client/src/styles/resources/data/roles/roles_transitions.scss
+++ b/client/src/styles/resources/data/roles/roles_transitions.scss
@@ -1,5 +1,5 @@
-// =========================| Roles: Transitions |========================= //
-
+//====================================================|
+// ROLES: TRANSITIONS
 
 
 $roles-transitions: (
