--- a/client/src/styles/resources/functions/functions_math.scss
+++ b/client/src/styles/resources/functions/functions_math.scss
@@ -1,5 +1,5 @@
-// =========================| Functions: Math |========================= //
-
+//====================================================|
+// FUNCTIONS: MATH
 
 
 //--------------------------| Progressive calc
