--- a/client/src/styles/resources/functions/functions_units.scss
+++ b/client/src/styles/resources/functions/functions_units.scss
@@ -1,5 +1,5 @@
-// =========================| Functions: Units |========================= //
-
+//====================================================|
+// FUNCTIONS: UNITS
 
 
 //--------------------------| Strip unit
