--- a/client/src/styles/resources/mixins/mixins_helpers.scss
+++ b/client/src/styles/resources/mixins/mixins_helpers.scss
@@ -1,5 +1,5 @@
-// =========================| Mixins: Helpers |========================= //
-
+//====================================================|
+// MIXINS: HELPERS
 
 
 //--------------------------| Padding
