--- a/client/src/styles/tokens/tokens_flexbox.scss
+++ b/client/src/styles/tokens/tokens_flexbox.scss
@@ -1,5 +1,5 @@
-// =========================| Tokens: Flexbox |========================= //
-
+//====================================================|
+// TOKENS: FLEXBOX
 
 
 //--------------------------|
