--- a/client/src/app/components/atoms/button/button.scss
+++ b/client/src/app/components/atoms/button/button.scss
@@ -1,5 +1,5 @@
-// =========================| Button |========================= //
-
+//====================================================|
+// BUTTON
 
 
 .pa-button {
