--- a/client/src/app/components/molecules/board-level/board-level.scss
+++ b/client/src/app/components/molecules/board-level/board-level.scss
@@ -1,5 +1,5 @@
-// =========================| Board level |========================= //
-
+//====================================================|
+// BOARD LEVEL
 
 
 //--------------------------| Body
