--- a/client/src/app/components/organisms/board/board.scss
+++ b/client/src/app/components/organisms/board/board.scss
@@ -1,10 +1,13 @@
-// =========================| Board |========================= //
+//====================================================|
+// BOARD
 
-
-
-//--------------------------| Body
 
 .po-board {
+
+  //--------------------------| Base
+
   padding: get-em-unit(map-get($roles-offsets, 'board'));
   background-color: map-get($reg-backgrounds, 'white');
-}
+
+
+} // .po-board
