--- a/client/src/app/components/organisms/controllers/controllers.scss
+++ b/client/src/app/components/organisms/controllers/controllers.scss
@@ -1,5 +1,5 @@
-// =========================| Controllers |========================= //
-
+//====================================================|
+// CONTROLLERS
 
 
 .po-controllers {
