--- a/client/src/app/components/templates/homepage/homepage.scss
+++ b/client/src/app/components/templates/homepage/homepage.scss
@@ -1,14 +1,17 @@
-// =========================| Home page |========================= //
+//====================================================|
+// HOME PAGE
 
-
-
-//--------------------------| Base
 
 .pt-homepage {
+
+  //--------------------------| Base
+
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-}
+
+
+} // .pt-homepage
 
 
 //--------------------------| Main
