--- a/client/src/styles/resources/data/registries/core/registries_colors.scss
+++ b/client/src/styles/resources/data/registries/core/registries_colors.scss
@@ -1,5 +1,5 @@
-// =========================| Registries: Colors |========================= //
-
+//====================================================|
+// REGISTRIES: COLORS
 
 
 $reg-colors: (
