--- a/client/src/styles/resources/data/registries/core/registries_offsets.scss
+++ b/client/src/styles/resources/data/registries/core/registries_offsets.scss
@@ -1,5 +1,5 @@
-// =========================| Registries: Offsets |========================= //
-
+//====================================================|
+// REGISTRIES: OFFSETS
 
 
 $reg-offsets: (
