--- a/client/src/styles/resources/data/registries/core/registries_transitions.scss
+++ b/client/src/styles/resources/data/registries/core/registries_transitions.scss
@@ -1,5 +1,5 @@
-// =========================| Registries: Transitions |========================= //
-
+//====================================================|
+// REGISTRIES: TRANSITIONS
 
 
 $reg-transitions: (
