--- a/client/src/styles/resources/data/roles/roles_buttons.scss
+++ b/client/src/styles/resources/data/roles/roles_buttons.scss
@@ -1,5 +1,5 @@
-// =========================| Roles: Buttons |========================= //
-
+//====================================================|
+// ROLES: BUTTONS
 
 
 //--------------------------| Types
