--- a/client/src/styles/resources/data/roles/roles_colors.scss
+++ b/client/src/styles/resources/data/roles/roles_colors.scss
@@ -1,5 +1,5 @@
-// =========================| Roles: Colors |========================= //
-
+//====================================================|
+// ROLES: COLORS
 
 
 //--------------------------| States
