--- a/client/src/styles/resources/data/roles/roles_offsets.scss
+++ b/client/src/styles/resources/data/roles/roles_offsets.scss
@@ -1,5 +1,5 @@
-// =========================| Roles: Offsets |========================= //
-
+//====================================================|
+// ROLES: OFFSETS
 
 
 $roles-offsets: (
