--- a/client/src/styles/resources/data/roles/roles_typography.scss
+++ b/client/src/styles/resources/data/roles/roles_typography.scss
@@ -1,5 +1,5 @@
-// =========================| Roles: Typography |========================= //
-
+//====================================================|
+// ROLES: TYPOGRAPHY
 
 
 //--------------------------| Base font size
