--- a/client/src/styles/resources/functions/functions_colors.scss
+++ b/client/src/styles/resources/functions/functions_colors.scss
@@ -1,5 +1,5 @@
-// =========================| Functions: Colors |========================= //
-
+//====================================================|
+// FUNCTIONS: COLORS
 
 
 //--------------------------| Light
