--- a/client/src/styles/resources/functions/functions_maps.scss
+++ b/client/src/styles/resources/functions/functions_maps.scss
@@ -1,5 +1,5 @@
-// =========================| Functions: Maps |========================= //
-
+//====================================================|
+// FUNCTIONS: MAPS
 
 
 $private-sassy-maps-suppress-warnings: false !default;
