--- a/client/src/styles/resources/mixins/mixins_layout.scss
+++ b/client/src/styles/resources/mixins/mixins_layout.scss
@@ -1,4 +1,6 @@
-// =========================| Mixins: Layout |========================= //
+//====================================================|
+// MIXINS: LAYOUT
+
 
 // For modern browsers
 // 1. The use of `table` rather than `block` is only necessary if using
