--- a/client/src/styles/resources/mixins/mixins_typography.scss
+++ b/client/src/styles/resources/mixins/mixins_typography.scss
@@ -1,5 +1,5 @@
-// =========================| Mixins: Typography |========================= //
-
+//====================================================|
+// MIXINS: TYPOGRAPHY
 
 
 //--------------------------| Font smoothing
