--- a/client/src/styles/scaffolding.scss
+++ b/client/src/styles/scaffolding.scss
@@ -1,5 +1,5 @@
-// =========================| Scaffolding styles |========================= //
-
+//====================================================|
+// SCAFFOLDING STYLES
 
 
 // Document
