--- a/client/src/styles/resources/data/roles/roles_typography.scss
+++ b/client/src/styles/resources/data/roles/roles_typography.scss
@@ -2,11 +2,6 @@
 // ROLES: TYPOGRAPHY
 
 
-//--------------------------| Base font size
-
-$roles-base-font-size: 16px;
-
-
 //--------------------------| Font families
 
 $roles-typo-font-families: (
@@ -17,7 +12,7 @@ $roles-typo-font-families: (
 //--------------------------| Font sizes range
 
 $roles-typo-font-sizes-base: (
-  'min': $roles-base-font-size,
+  'min': $base-html-font-size,
   'max': 32px
 );
 
