--- a/client/src/styles/resources/functions/functions_math.scss
+++ b/client/src/styles/resources/functions/functions_math.scss
@@ -4,6 +4,6 @@
 
 //--------------------------| Progressive calc
 
-@function get-progressive-calc($min-obj-size, $max-obj-size, $min-vw: map-get($reg-screens, 'min'), $max-vw: map-get($reg-screens, 'max')) {
+@function get-progressive-calc($min-obj-size, $max-obj-size, $min-vw: map-get($reg-screens, 'min-w'), $max-vw: map-get($reg-screens, 'max-w')) {
   @return calc(#{$min-obj-size} + #{strip-unit($max-obj-size - $min-obj-size)} * ((100vw - #{$min-vw}) / #{strip-unit($max-vw - $min-vw)}));
 }
