--- a/client/src/app/components/atoms/switcher/switcher.scss
+++ b/client/src/app/components/atoms/switcher/switcher.scss
@@ -12,7 +12,7 @@
   //--------------------------| Variables
 
   $wing-width: get-em-unit($roles-size-switcher-width);
-  $lever-height: .6em;
+  $lever-height: 1em;
   $hover-color: map-get($reg-colors, 'orange-light');
   $marked-color: map-get($reg-colors, 'graphite');
   $selected-color: map-get($reg-colors, 'graphite');
@@ -113,24 +113,31 @@
 
   //--------------------------| Roles
 
+  &[data-role] {
+    &::before {
+      $size: 1em;
+
+      @include transition($transition);
+      @include translateX(-50%);
+      @include opacity(0);
+
+      position: absolute;
+      top: .2em;
+      left: 50%;
+      width: $size;
+      height: $size;
+      content: '';
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+  }
+
   @each $role in $roles {
     $url: '../../../../assets/icons/#{$role}.svg';
 
     &[data-role='#{$role}'] {
       &::before {
-        $size: .66em;
-
-        @include transition($transition);
-        @include translateX(-50%);
-        @include opacity(0);
-
-        position: absolute;
-        top: .2em;
-        left: 50%;
-        width: $size;
-        height: $size;
-        content: '';
-        background: url($url) center no-repeat;
+        background-image: url($url);
       }
     }
   }
