Layout scalability improvements

--- a/client/src/app/app.scss
+++ b/client/src/app/app.scss
@@ -9,14 +9,19 @@
   @include font-smoothing();
   @include box-shadow(0 0 80em -2em map-get($reg-colors, 'dark-silver'));
   @include user-select(none);
+  @include display-flex();
+  @include justify-content(center);
 
   min-width: map-get($reg-screens, 'min-w');
-  max-width: map-get($reg-screens, 'max-w');
   height: 100vh;
   margin: 0 auto;
   font: map-get($roles-typo-font-weights, 'text') 1em map-get($roles-typo-font-families, 'text');
   text-align: center;
   cursor: default;
+
+  @include mq-screens-big-landscape() {
+    display: block;
+  }
 
 
 } // #app
