Fix: Bring back the App shadow

--- a/client/src/app/app.scss
+++ b/client/src/app/app.scss
@@ -9,9 +9,8 @@
   @include font-smoothing();
   @include box-shadow(0 0 80em -2em map-get($reg-colors, 'dark-silver'));
   @include user-select(none);
-  @include display-flex();
-  @include justify-content(center);
 
+  display: inline-block;
   min-width: map-get($reg-screens, 'min-w');
   height: 100vh;
   margin: 0 auto;
