--- a/client/src/app/components/atoms/label/label.scss
+++ b/client/src/app/components/atoms/label/label.scss
@@ -2,12 +2,9 @@
 // LABEL
 
 
-.pa-label {
+//--------------------------| Root
 
-  //--------------------------| Base
-
+.root {
   font-size: map-get($roles-typo-font-sizes, 'label');
   line-height: 2em;
-
-
-} // .pa-label
+}
