--- a/client/src/app/components/organisms/board/board.scss
+++ b/client/src/app/components/organisms/board/board.scss
@@ -2,14 +2,11 @@
 // BOARD
 
 
-.po-board {
+//--------------------------| Root
 
-  //--------------------------| Base
-
+.root {
   @include border-v(1px solid map-get($reg-colors, 'silver'));
 
   padding: get-em-unit(map-get($roles-offsets, 'board'));
   background-color: map-get($reg-backgrounds, 'white');
-
-
-} // .po-board
+}
