--- a/client/src/styles/external/custom-scrollbar.scss
+++ b/client/src/styles/external/custom-scrollbar.scss
@@ -2,33 +2,36 @@
 // EXTERNAL: CUSTOM SCROLLBAR
 
 
-.custom-scroll {
+:global {
 
-  //--------------------------| Base
+  .rcs-custom-scroll {
 
-  background-color: map-get($reg-backgrounds, 'pale-silver');
+    //--------------------------| Base
 
-
-  //--------------------------| Handle
-
-  .custom-scroll-handle {
-    pointer-events: all;
-    cursor: pointer;
-  }
+    background-color: map-get($reg-backgrounds, 'pale-silver');
 
 
-  //--------------------------| Bar
+    //--------------------------| Handle
 
-  .inner-handle {
-    @include transition(background-color .15s linear);
-
-    background-color: rgba(map-get($reg-colors, 'black'), .3);
-
-    &:hover,
-    &:active {
-      background-color: rgba(map-get($reg-colors, 'black'), .6);
+    .rcs-custom-scroll-handle {
+      pointer-events: all;
+      cursor: pointer;
     }
-  }
 
 
-} // .custom-scroll
+    //--------------------------| Bar
+
+    .rcs-inner-handle {
+      @include transition(background-color 0.15s linear);
+
+      background-color: rgba(map-get($reg-colors, 'black'), 0.3);
+
+      &:hover,
+      &:active {
+        background-color: rgba(map-get($reg-colors, 'black'), 0.6);
+      }
+    }
+
+  } // .rcs-custom-scroll
+
+} // :global
