--- a/client/src/app/components/atoms/meta/meta.scss
+++ b/client/src/app/components/atoms/meta/meta.scss
@@ -2,13 +2,10 @@
 // META
 
 
-.pa-meta {
+//--------------------------| Root
 
-  //--------------------------| Base
-
+.root {
   font-size: map-get($roles-typo-font-sizes, 'meta');
   font-weight: map-get($roles-typo-font-weights, 'meta');
   color: map-get($roles-col-texts, 'meta');
-
-
-} // .pa-meta
+}
