--- a/client/src/app/components/molecules/board-level/board-level.scss
+++ b/client/src/app/components/molecules/board-level/board-level.scss
@@ -2,13 +2,13 @@
 // BOARD LEVEL
 
 
-//--------------------------| Body
+//--------------------------| Root
 
-.pm-board-level {
+.root {
   @include display-flex();
   @include justify-content(center);
 
-  & + .pm-board-level {
+  + .root {
     margin-top: 1em;
   }
 }
@@ -16,6 +16,6 @@
 
 //--------------------------| Item
 
-.pm-board-level--item {
+.item {
   padding: 0 get-em-unit($wing-side-offset);
 }
