--- a/client/src/styles/scaffolding.scss
+++ b/client/src/styles/scaffolding.scss
@@ -52,8 +52,10 @@ body {
   -webkit-tap-highlight-color: rgba(map-get($reg-colors, 'black'), 0);
 }
 
-#root {
-  text-align: center;
+:global {
+  #root {
+    text-align: center;
+  }
 }
 
 
